<resources>
    <string name="app_name">LauncherUI7</string><!-- app 名称 -->

    <string name="ui_key" translatable="false">LauncherUI7</string>
    <string name="ui_clazz" translatable="false">com.launcher.ui7.MainActivityUI7</string>


    <string name="click_play_music">Click To Play</string>
    <string name="music_artist">Artist</string>
    <string name="add_app">Add</string>
    <string name="music">Music</string>
    <string name="navigation">Navigation</string>
    <string name="App">App</string>
    <string name="radio">Radio</string>
    <string name="phone">Phone</string>
    <string name="browser">Browser</string>
    <string name="setting">Settings</string>
    <string name="equalizer">Dsp</string>
    <string name="video">Video</string>
    <string name="aux">Aux</string>

    <string-array name="wallpapers" translatable="false">
        <item>wallpaper_00</item>
        <item>wallpaper_01</item>
        <item>wallpaper_02</item>
        <item>wallpaper_03</item>
    </string-array>

</resources>